<resources>
    <string name="app_name">EmotiCare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="greetings">Welcome to EmotiCare</string>
    <string name="question">How are you feeling today?</string>
    <string name="title_article">Explore Article</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="subtitle">Your Emotional \Support Buddy</string>
    <string name="hint_pass">Password</string>
    <string name="hint_email">Email</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="have_account">Don\'t have an account?</string>
    <string name="started">Get Started</string>
    <string name="hint_name">Name</string>
    <string name="welcome">Welcome to</string>
    <string name="dark_mode">Dark Mode</string>
</resources>