<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/onboarding_image_5"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="@drawable/login_rectangle"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/hint_email"
            android:paddingStart="20dp"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/key_icon"
            android:paddingStart="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:layout_marginBottom="16dp"
            android:text="@string/forget_pass"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="246dp"
            android:layout_height="66dp"
            android:layout_marginHorizontal="75dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>
