<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".onboarding.OnboardingActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvAppname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Emotional Support Buddy"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/signin"
        android:textColor="@color/blue"
        android:background="@drawable/btn_transparent"/>

    <TextView
        android:id="@+id/tvStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/started"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>


</LinearLayout>