<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onboarding_image_2"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/credentialsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_rectangle"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/titleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/idcard"
            android:drawablePadding="5dp"
            android:hint="@string/hint_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="5dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/key_icon"
            android:drawablePadding="5dp"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingStart="20dp" />


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="246dp"
            android:layout_height="66dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>